--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
 options.js
 static/fonts/*
+static/fonts/_threejs/*.json
 !static/fonts/fonts.txt
 # static/fonts/_threejs/*.json
 # !static/fonts/_*
