--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,6 @@ static/fonts/_threejs/*.json
 # !static/fonts/_*
 static/js/src/custom/*
 !static/js/src/custom/*-sample.*
+static/js/custom/*
+!static/js/custom/*-sample.*
 webpack.config.js
