--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 *.DS_Store
 options.js
 fonts.js
+shapes.js
+
 static/fonts/*
 static/fonts/_threejs/*.json
 !static/fonts/_fonts.txt
-# static/fonts/_threejs/*.json
-# !static/fonts/_*
 static/js/src/custom/*
 !static/js/src/custom/*-sample.*
 static/js/custom/*
