--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ static/js/custom/*
 webpack.config.js
 config.php
 .htaccess
-static/js/dist/main.js
+static/js/dist/*
 static/js/package-lock.json
 static/js/node_modules
 *.js.LICENSE.txt
