--- a/static/js/package.json
+++ b/static/js/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jspdf": "^2.5.2",
     "omggif": "^1.0.10",
     "paper": "^0.12.15",
     "path": "^0.12.7",
